--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,26 @@
-version '3'
+version '3' services:
+  node-app:
+    build:
+      context: ./node-app
+    container_name: nodeserver
+    hostname: nodeserver
+    ports:
+      - "3000:3000"
+    
+  nginx:
+    build:
+      context: ./nginx
+    container_name: nginx
+    hostname: nginx
+    ports: 
+      - "80:80"
+    depends_on:
+      - node-app
+
+  mariadb:
+    build:
+        context: ./mariadb
+    container_name: mariadb
+    hostname: mariadb
+    ports: 
+      - "3306:3306"
