--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: "3"
 services:
-  node-app:
+  node:
     build:
-      context: ./node-app
-    container_name: nodeserver
-    hostname: nodeserver
+      context: ./node
+    container_name: node
+    hostname: node
     ports:
       - "3000:3000"
     
@@ -16,7 +16,7 @@ services:
     ports: 
       - "80:80"
     depends_on:
-      - node-app
+      - node
 
   mariadb:
     build:
