--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,6 +4,6 @@ server{
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarder-For $proxy_add_x_forwarder_for;
         proxy_set_header X-Forwarder-Proto $scheme;
-        proxy_pass http://nodeserver:3000
+        proxy_pass http://192.168.0.11:3000
     }
 }
