--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,9 +1,15 @@
 server{
+    listen 80;
+    listen 443 ssl;
+
+    ssl_certificate /etc/nginx/ssl/server.crt;
+    ssl_certificate_key /etc/nginx/ssl/server.key;
+
     location / {
+        proxy_pass http://node:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarder-For $proxy_add_x_forwarder_for;
         proxy_set_header X-Forwarder-Proto $scheme;
-        proxy_pass http://192.168.0.11:3000
     }
 }
